--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,11 @@
-<p>
-  posts works!
-</p>
+ <input 
+ (keyup.enter)="createPost(title)" #title
+ type="text" class="form-control" />
+ 
+ <ul class="list-group">
+   <li class="list-group-item"
+   *ngFor="let post of posts" 
+   >
+     {{post.title}}
+   </li>
+ </ul>
