--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -6,6 +6,9 @@
    <li class="list-group-item"
    *ngFor="let post of posts" 
    >
+   <button
+   (click)="updatePost(post)"
+   class="btn btn-default btn-sm">Update</button>
      {{post.title}}
    </li>
  </ul>
